--- a/Web.Api/Web.Api.csproj
+++ b/Web.Api/Web.Api.csproj
@@ -10,10 +10,13 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
+        <PackageReference Include="Bogus" Version="35.5.0" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+        <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -23,7 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Features\Tasks\" />
+      <Folder Include="Common\Abstractions\" />
     </ItemGroup>
 
 </Project>
