--- a/Web/package.json
+++ b/Web/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^17.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
+    "@ngrx/store-devtools": "^17.1.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
