--- a/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
+++ b/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
@@ -7,7 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <RootNamespace>TestProject1</RootNamespace>
+        <RootNamespace>Web.Api.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,5 +21,5 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Web.Api\Web.Api.csproj" />
     </ItemGroup>
-
+    
 </Project>
