--- a/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
+++ b/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
@@ -1,25 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+      <TargetFramework>net8.0</TargetFramework>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
 
-        <IsPackable>false</IsPackable>
-        <IsTestProject>true</IsTestProject>
-        <RootNamespace>Web.Api.UnitTests</RootNamespace>
+      <IsPackable>false</IsPackable>
+      <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="xunit" Version="2.7.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\Web.Api\Web.Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Using Include="Xunit" />
     </ItemGroup>
     
 </Project>
